Fixed the weather icon not showing up. Icon now shows but the rest of the weeks is not populating

--- a/style.css
+++ b/style.css
@@ -1,45 +1,32 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-.container-fluid {
-    background-color: #212529;
-    max-width: 100vw;
-    width: 100%;
-    height: 100vh;
-}
-
-.row .search-results{
-    height: 100vh;
-    background-color: #23272c;
-    box-shadow: 0px 1px 5px 1px #1c1d20;
-}
-
-.input-group {
-    margin-top: 30px;
+.search-container{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    max-width: 900px;
+    width: 100%;
+    padding: 20px;
+    top: 150;
 }
 
-.input-group > .form-control {
-    border: solid 2px #212529
+.hero.is-fullheight-with-navbar > .hero-body {
+    justify-content: center;
+    align-items: none;
+    background-color: #212529
+}
+.dash-cards>.weather-stats {
+    text-align: center;
 }
 
-.input-group > .btn {
-    border-radius: 0px;
-    border: solid 2px #212529
-}
-
-.input-group > .btn-outline-primary {
-    color: #fff;
-    background-color: #212529;
-    box-shadow: 0px 1px 5px 1px #1c1d20;
-}
-
-.input-group >.btn-outline-primary:hover {
-    background-color: #212529;
-    color: #ffff;
+.col-3 > #clearAll{
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .dashboard {
@@ -48,32 +35,37 @@
 
 .dash-cards {
     margin: 0 auto;
+    width: 100%;
+    height: 50%; 
+}
+
+#weather-stats {
     width: 80%;
-    background-color;
+    margin: 0 auto;
+    text-align: center;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    color: #fff;
+    height: 20vh;
+} 
+
+.weekday {
+    border: 2px solid #fff;
+    margin:5px; 
+    max-width: 300px;
+    width: 100%;
+    max-height: 300px;
+    height: 100%;
 }
 
+.large-font {
+    
+    font-weight: 500;
+}
 
-/*BootStrap Queries - Giving me problems on full screen */
-@media screen and (min-width: 1200px) {
-	.container {
-		max-width: 1200px;
-	}
+.columns {
+    padding:5px;
 }
-@media screen and (min-width: 992px){
-	.container {
-		max-width: 992px;
-	}
-}
-@media screen and (min-width: 768px) {
-	.container {
-		max-width: 768px;
-	}
-}
-@media screen and (min-width: 576px){
-	.container {
-		max-width: 576px;
-	}
+
+.columns > .column {
+    margin:5px; 
 }
